--- a/SCSS/Theme Rewrite/plugins-core/_bookmarks.scss
+++ b/SCSS/Theme Rewrite/plugins-core/_bookmarks.scss
@@ -1,5 +1,12 @@
 .bookmark {
-    & + .tree-item-children { --nav-item-children-margin-left: 12px; }
-
-    &.tree-item-self { gap: 4px; }
+    & + .tree-item-children { 
+        --nav-item-children-margin-left: 12px; 
+        --nav-item-children-padding-left: 4px;
+    }
+    &.tree-item-self.mod-collapsible {
+        --nav-item-weight: 900;
+    }
+}
+.workspace-leaf-content[data-type=bookmarks] .view-content {
+    padding: 0 var(--size-4-2);
 }
